src/objects/OppType__c/OppType__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>OppType</label>
</CustomObject>