src/objects/OppType__c/fields/Complex__c.field-meta.xml
<CustomField>
    <fullName>Complex__c</fullName>
    <label>Complex</label>
    <length>18</length>
    <type>Text</type>
</CustomField>