src/objects/OppType__c/fields/D_S_Catalog_Restricted_FollowOn__c.field-meta.xml
<CustomField>
    <fullName>D_S_Catalog_Restricted_FollowOn__c</fullName>
    <label>D&amp;S Catalog Restricted FollowOn</label>
    <length>18</length>
    <type>Text</type>
</CustomField>