src/objects/OppType__c/fields/Focus__c.field-meta.xml
<CustomField>
    <fullName>Focus__c</fullName>
    <label>Focus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>