src/objects/OppType__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>