src/objects/OppType__c/fields/Restricted_Catalog__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Catalog__c</fullName>
    <label>Restricted Catalog</label>
    <length>18</length>
    <type>Text</type>
</CustomField>