src/objects/OppType__c/fields/Restricted_Complex__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Complex__c</fullName>
    <label>Restricted Complex</label>
    <length>18</length>
    <type>Text</type>
</CustomField>