src/objects/OppType__c/fields/Restricted_Focus__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Focus__c</fullName>
    <label>Restricted Focus</label>
    <length>18</length>
    <type>Text</type>
</CustomField>