src/objects/OppType__c/fields/Restricted_Key__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Key__c</fullName>
    <label>Restricted Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>