src/objects/OppType__c/fields/Restricted_Standard__c.field-meta.xml
<CustomField>
    <fullName>Restricted_Standard__c</fullName>
    <label>Restricted Standard</label>
    <length>18</length>
    <type>Text</type>
</CustomField>