src/objects/OppType__c/fields/RestrictedAccount__c.field-meta.xml
<CustomField>
    <fullName>RestrictedAccount__c</fullName>
    <label>RestrictedAccount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>