src/objects/OppType__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <length>18</length>
    <type>Text</type>
</CustomField>